# qtserialbus

./: .gitattributes  .gitignore  .prev_CMakeLists.txt  .qmake.conf  CMakeLists.txt  TODO  conanfile.py  dependencies.yaml  licenseRule.json  qt_cmdline.cmake  qtserialbus.pro  sync.profile
coin/: module_config.yaml
examples/: CMakeLists.txt  examples.pro
examples/serialbus/: CMakeLists.txt  serialbus.pro
examples/serialbus/can/: .prev_CMakeLists.txt  CMakeLists.txt  bitratebox.cpp  bitratebox.h  can.pro  canbusdeviceinfobox.cpp  canbusdeviceinfobox.h  canbusdeviceinfodialog.cpp  canbusdeviceinfodialog.h  common.h  connectdialog.cpp  connectdialog.h  connectdialog.ui  global.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  receivedframesmodel.cpp  receivedframesmodel.h  receivedframesview.cpp  receivedframesview.h  sendframebox.cpp  sendframebox.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
examples/serialbus/graphical/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
examples/serialbus/modbus/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  modbus.pro
examples/serialbus/modbus/adueditor/: .prev_CMakeLists.txt  CMakeLists.txt  adueditor.pro  mainwindow.cpp  mainwindow.h  modbustcpclient.h  modbustcpclient_p.h  plaintextedit.h
examples/serialbus/modbus/client/: CMakeLists.txt  client.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.h  writeregistermodel.cpp  writeregistermodel.h
examples/serialbus/modbus/custom/: CMakeLists.txt  custom.pro  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modbusclient.cpp  modbusclient.h  modbusserver.cpp  modbusserver.h  registermodel.cpp  registermodel.h
examples/serialbus/modbus/master/: .prev_CMakeLists.txt  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  master.pro  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  writeregistermodel.cpp  writeregistermodel.h
examples/serialbus/modbus/server/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  server.pro  settingsdialog.cpp  settingsdialog.h
examples/serialbus/modbus/slave/: .prev_CMakeLists.txt  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.h  slave.pro
src/plugins/canbus/: CMakeLists.txt  canbus.pro
src/plugins/canbus/passthrucan/: CMakeLists.txt  j2534passthru.cpp  j2534passthru.h  main.cpp  passthrucanbackend.cpp  passthrucanbackend.h  passthrucanio.cpp  passthrucanio.h
src/plugins/canbus/peakcan/: CMakeLists.txt  main.cpp  peakcan.pro  peakcan_symbols_p.h  peakcanbackend.cpp  peakcanbackend.h  peakcanbackend_p.h  peakcanbackend_stub.cpp  peakcanbackend_win.cpp  symbols_win_p.h
src/plugins/canbus/socketcan/: CMakeLists.txt  libsocketcan.cpp  libsocketcan.h  main.cpp  socketcan.pro  socketcanbackend.cpp  socketcanbackend.h
src/plugins/canbus/systeccan/: CMakeLists.txt  main.cpp  systeccan.pro  systeccan_symbols_p.h  systeccanbackend.cpp  systeccanbackend.h  systeccanbackend_p.h
src/plugins/canbus/tinycan/: CMakeLists.txt  main.cpp  tinycan.pro  tinycan_symbols_p.h  tinycanbackend.cpp  tinycanbackend.h  tinycanbackend_p.h
src/plugins/canbus/vectorcan/: CMakeLists.txt  main.cpp  vectorcan_symbols_p.h  vectorcanbackend.cpp  vectorcanbackend.h  vectorcanbackend_p.h
src/plugins/canbus/virtualcan/: CMakeLists.txt  main.cpp  virtualcan.pro  virtualcanbackend.cpp  virtualcanbackend.h
src/tools/: CMakeLists.txt  tools.pro
src/tools/canbusutil/: .prev_CMakeLists.txt  CMakeLists.txt  canbusutil.cpp  canbusutil.h  canbusutil.pro  main.cpp  readtask.cpp  readtask.h  sigtermhandler.cpp  sigtermhandler.h
tests/auto/: .prev_CMakeLists.txt  CMakeLists.txt  auto.pro
tests/auto/bic/data/: QtSerialBus.5.13.0.linux-gcc-amd64.txt  QtSerialBus.5.14.0.linux-gcc-amd64.txt  QtSerialBus.5.15.0.linux-gcc-amd64.txt
tests/auto/cmake/: CMakeLists.txt
tests/auto/plugins/: CMakeLists.txt  plugins.pro
tests/auto/plugins/genericcanbus/: CMakeLists.txt  dummybackend.cpp  dummybackend.h  genericcanbus.pro  main.cpp
tests/auto/plugins/genericcanbusv1/: CMakeLists.txt  dummybackendv1.cpp
tests/auto/qcanbus/: CMakeLists.txt  qcanbus.pro  tst_qcanbus.cpp
tests/auto/qcanbusdevice/: CMakeLists.txt  qcanbusdevice.pro  tst_qcanbusdevice.cpp
tests/auto/qcanbusframe/: CMakeLists.txt  tst_qcanbusframe.cpp
tests/auto/qcandbcfileparser/: CMakeLists.txt  tst_qcandbcfileparser.cpp
tests/auto/qcanframe/: qcanframe.pro  tst_qcanframe.cpp
tests/auto/qcanframeprocessor/: CMakeLists.txt  tst_qcanframeprocessor.cpp
tests/auto/qcanmessagedescription/: CMakeLists.txt  tst_qcanmessagedescription.cpp
tests/auto/qcansignaldescription/: CMakeLists.txt  tst_qcansignaldescription.cpp
tests/auto/qcanuniqueiddescription/: CMakeLists.txt  tst_qcanuniqueiddescription.cpp
tests/auto/qmodbus/: qmodbus.pro  tst_qmodbus.cpp
tests/auto/qmodbusadu/: CMakeLists.txt  tst_qmodbusadu.cpp
tests/auto/qmodbusclient/: .prev_CMakeLists.txt  CMakeLists.txt  qmodbusclient.pro  tst_qmodbusclient.cpp
tests/auto/qmodbuscommevent/: CMakeLists.txt  qmodbuscommevent.pro  tst_qmodbuscommevent.cpp
tests/auto/qmodbusdataunit/: CMakeLists.txt  qmodbusdataunit.pro  tst_qmodbusdataunit.cpp
tests/auto/qmodbusdevice/: CMakeLists.txt  qmodbusdevice.pro  tst_qmodbusdevice.cpp
tests/auto/qmodbusdeviceidentification/: CMakeLists.txt  tst_qmodbusdeviceidentification.cpp
tests/auto/qmodbuspdu/: CMakeLists.txt  tst_qmodbuspdu.cpp
tests/auto/qmodbusreply/: CMakeLists.txt  qmodbusreply.pro  tst_qmodbusreply.cpp
tests/auto/qmodbusrtuserialclient/: CMakeLists.txt  tst_qmodbusrtuserialclient.cpp
tests/auto/qmodbusrtuserialmaster/: CMakeLists.txt  tst_qmodbusrtuserialmaster.cpp
tests/auto/qmodbusserver/: CMakeLists.txt  qmodbusserver.pro  tst_qmodbusserver.cpp
tests/auto/qserialbus/: qserialbus.pro  tst_qserialbus.cpp
tests/auto/qserialbusdevice/: qserialbusdevice.pro  tst_qserialbusdevice.cpp
tests/auto/shared/: qcanmessagedescription_helpers.h  qcansignaldescription_helpers.h  qcanuniqueiddescription_helpers.h
(+229 files in other folders)
